# technical-manual-rag

./: .gitignore  README.md  docker-compose.yml  main.ipynb  pyproject.toml
config/: llm.yaml  retriever.yaml
data/: tables.db
frontend/src/: App.jsx
src/: .env.example  Dockerfile  app.py  generator.py  ingest.py  main.py  pyproject.toml  retriever.py
src/app/: generator.py  main.py  retriever.py  utils.py
src/app/ingest/: __init__.py  db.py  images.py  parser.py  pipeline.py  tables.py
src/data/: tables.db
src/eval/: eval_dataset.csv  generation.py  main.py  retrieval.py
src/eval/prompts/: correctness.md  faithfulness.md  relevance.md
src/ingest/: __init__.py  db.py  images.py  parser.py  pipeline.py  tables.py
ui/: index.html  package-lock.json  package.json
ui/src/: api.ts  main.ts  style.css  types.ts
ui/src/components/: answerBlock.ts  chat.ts  input.ts  sidebar.ts
