[project]
name = "technical-manual-rag"
version = "0.1.0"
description = "RAG system for technical user manuals"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "llama-cloud>=2.0.0",
    "llama-index-core>=0.14.19",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-google-genai>=0.9.1",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-llms-vllm>=0.7.0",
    "llama-index-postprocessor-cohere-rerank>=0.8.0",
    "llama-index-retrievers-bm25>=0.7.1",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pdf-oxide>=0.3.61",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.17.1",
    "tools>=1.0.29",
    "torch>=2.11.0",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
